[tool.poetry]
name = "network_analyze"
version = "0.1.0"
description = ""
authors = ["antoninak <antonina.krajewska@nask.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
kmeans-pytorch = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
